# generics-alias-rs

./: Cargo.toml  LICENSE  README.md
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs
