[package]
name = "generics-alias"
version = "0.1.0"
edition = "2021"
authors = [ "Jaroslav Beran <jara.beran@gmail.com>" ]
license = "MIT"
keywords = [ "macro", "proc-macro", "generics" ]
categories = [ "development-tools", "development-tools::procedural-macro-helpers" ]

[workspace]
members = [ "macros" ]

[dependencies]
generics-alias-macros = { path = "./macros" }
macro_magic = { version = "0.5.0", features = ["proc_support"] }
